--- a/index.html
+++ b/index.html
@@ -10,7 +10,56 @@
 </head>
 
 <body>
-    <h1>Hello miro</h1>
+    <nav>
+        <div class="navLeft">
+
+            <a class="logo" href="#">
+                <img src="./assests/logo.png" alt="">
+            </a>
+
+            <div class="links">
+                <a href="#">
+                    Product<i class="fa-solid fa-angle-down"></i>
+                </a>
+
+                <a href="#">
+                    Solutions<i class="fa-solid fa-angle-down"></i>
+                </a>
+
+                <a href="#">
+                    Resources<i class="fa-solid fa-angle-down"></i>
+                </a>
+
+                <a href="#">
+                    Enterprise<i class="fa-solid fa-angle-down"></i>
+                </a>
+
+                <a href="#">
+                    Pricing<i class="fa-solid fa-angle-down"></i>
+                </a>
+            </div>
+
+        </div>
+
+
+        <div class="navRight">
+
+            <button>
+                <i class="fa-solid fa-globe"></i> En
+            </button>
+
+            <p>Contactless</p>
+
+            <div class="flex items-center justify-center gap-[10px]">
+                <a href="#">Login</a>
+                <a href="#"
+                    class="flex items-center justify-center w-[151px] h-[51px] bg-[#4262FF] rounded-full text-white">Signup
+                    <i class="fa-solid fa-arrow-right-long"></i></a>
+            </div>
+        </div>
+    </nav>
+
+    <script src="https://kit.fontawesome.com/19c0e07b44.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
