--- a/index.html
+++ b/index.html
@@ -53,11 +53,49 @@
             <div class="flex items-center justify-center gap-[10px]">
                 <a href="#">Login</a>
                 <a href="#"
-                    class="flex items-center justify-center w-[151px] h-[51px] bg-[#4262FF] rounded-full text-white">Signup
+                    class="flex items-center justify-center gap-[10px] w-[151px] h-[51px] bg-[#4262FF] rounded-full text-white">Signup
                     <i class="fa-solid fa-arrow-right-long"></i></a>
             </div>
         </div>
     </nav>
+
+    <div class="bannerWrapper">
+
+        <div class="flex flex-col gap-[20px]">
+            <h1 class="text-[#050038] text-[48px] font-[700] w-[376px]">Take ideas from better to best</h1>
+            <p class="w-[428px]">Miro is your team's visual platform to connect, collaborate, and create — together.</p>
+
+            <div class="flex flex-col gap-[10px]">
+                <input type="email" placeholder="Enter your work email outline-none"
+                    class="h-[48px] w-[440px]  pl-[15px] border-[1px] border-[#9B99AF] rounded-full">
+                <button
+                    class="flex items-center justify-center gap-[10px] w-[440px] h-[51px] bg-[#4262FF] rounded-full text-white">Signup
+                    <i class="fa-solid fa-arrow-right-long"></i>
+                </button>
+                <p class="text-[#05003866]">Collaborate with your team within minutes</p>
+            </div>
+
+            <div class="h-[60px] w-[350px] bg-[#F5F5F7] rounded-md flex items-center justify-evenly">
+
+                <div>
+                    <div class="text-[#ff9d48]">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <p class="text-[11px]">Based on 5149+ reviews:</p>
+                </div>
+                <img src="./assests/Bcontent.png" alt="" class="w-[150px]">
+            </div>
+
+        </div>
+
+        <img src="./assests/bannerIMG.png" class="w-[650px]">
+
+
+    </div>
 
     <script src="https://kit.fontawesome.com/19c0e07b44.js" crossorigin="anonymous"></script>
 </body>
