colabe section done

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </div>
     </nav>
 
+    <!-- banner section -->
     <div class="bannerWrapper">
 
         <div class="flex flex-col gap-[20px]">
@@ -94,6 +95,69 @@
 
         <img src="./assests/bannerIMG.png" class="w-[650px]">
 
+
+    </div>
+
+    <!-- company section -->
+
+    <div class="w-full h-[284px] flex flex-col items-center justify-center gap-[50px]">
+        <p class="text-[14px] text-[#05003899]">Trusted by 45M+ users</p>
+
+        <div class="w-[1120px] flex justify-between items-center gap-[15px] company">
+            <img src="./assests/c1.png" alt="">
+            <img src="./assests/c2.png" alt="">
+            <img src="./assests/c3.png" alt="">
+            <img src="./assests/c4.png" alt="">
+            <img src="./assests/c5.png" alt="">
+        </div>
+
+    </div>
+
+
+    <div class="w-[1140px] min-h-[564px] flex flex-col items-center gap-[25px] justify-center mx-auto mt-[56px]">
+
+        <h1 class="text-[48px] font-[700] text-[#050038] text-center relative">
+            Collaborate without <br> constraints
+            <span
+                class="absolute bg-[#FFD02F] px-[12px] py-[3px] rounded-lg text-[13px] rotate-12 top-[-50px] right-[-70px]">
+                YOUR IDEA STARTS HERE
+            </span>
+        </h1>
+
+        <div class="flex justify-center items-start gap-[50px] mt-[15px]">
+
+            <div class="flex flex-col items-start justify-start gap-[15px]">
+                <h3 class="text-[#050038] text-[24px] font-[700]">Free forever</h3>
+                <p class="w-[313px]">Our free plan gives you unlimited team members, 3 boards, and 300+ expert-made
+                    templates. Signing up
+                    with your work email lets you bring in your team faster. See our <br>
+                    <a href="#" class="text-[#4262FF]">pricing plans</a> for more features.
+                </p>
+            </div>
+
+            <div class="flex flex-col items-start justify-start gap-[15px]">
+                <h3 class="text-[#050038] text-[24px] font-[700]">Easy integrations</h3>
+                <p class="w-[313px]">Miro has 100+ powerful integrations with tools you already use like G Suite, Slack,
+                    and Jira, so your workflow is seamless. View the full list in our
+                    <a href="#" class="text-[#4262FF]">Marketplace</a>
+                </p>
+            </div>
+
+            <div class="flex flex-col items-start justify-start gap-[15px]">
+                <h3 class="text-[#050038] text-[24px] font-[700]">Security first</h3>
+
+                <p class="w-[313px]">We treat your data like you would — with the utmost care. We follow
+                    industry-leading security standards and give you tools to protect intellectual property. Learn more
+                    at our
+                    <a href="#" class="text-[#4262FF]"> Trust Center.</a>
+                </p>
+            </div>
+
+        </div>
+
+        <a href="#"
+            class="flex items-center justify-center gap-[10px] w-[178px] h-[51px] bg-[#4262FF] rounded-full text-white">Signup
+            for free<i class="fa-solid fa-arrow-right-long"></i></a>
 
     </div>
 
