other 2 section completed

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     </div>
 
-
+    <!-- colab section -->
     <div class="w-[1140px] min-h-[564px] flex flex-col items-center gap-[25px] justify-center mx-auto mt-[56px]">
 
         <h1 class="text-[48px] font-[700] text-[#050038] text-center relative">
@@ -159,6 +159,58 @@
             class="flex items-center justify-center gap-[10px] w-[178px] h-[51px] bg-[#4262FF] rounded-full text-white">Signup
             for free<i class="fa-solid fa-arrow-right-long"></i></a>
 
+    </div>
+
+
+    <!-- Work together section -->
+    <div class="h-[535px] w-[1140px] mx-auto flex justify-between items-center">
+
+        <div class="w-[453px] flex flex-col items-start justify-start gap-[20px]">
+            <h1 class="font-[700] text-[#050038] text-[47px]">Work together, wherever you work</h1>
+
+            <p class="text-[#05003899] text-[18px]">In the office, remote, or a mix of the two, with Miro, your team can
+                connect,
+                collaborate, and co-create
+                in one space no matter where you are.</p>
+
+            <a href="#" class="text-[#4262FF] flex justify-center items-center gap-[20px] mt-[15px]"><span
+                    class="underline">Learn
+                    more </span> <i class="fa-solid fa-arrow-right-long"></i></a>
+        </div>
+
+        <img src="./assests/heroCJ.png" class="w-[550px]">
+    </div>
+
+    <!-- connect your tools -->
+    <div class="w-[1140px] mx-auto flex justify-between items-center">
+        <img src="./assests/techSolar.png" class="w-[550px]">
+        <div class="w-[405px] flex flex-col items-start justify-start gap-[20px]">
+            <h1 class="font-[700] text-[#050038] text-[47px]">Connect <br> your tools, <br> close your tabs</h1>
+            <p class="text-[#05003899] text-[18px] w-[458px]">Whether you want to edit your Google Docs, resolve Jira
+                issues, or
+                collaborate over Zoom, Miro has 100+
+                integrations with tools you already use and love.</p>
+
+            <a href="#" class="text-[#4262FF] flex justify-center items-center gap-[20px] mt-[15px]"><span
+                    class="underline">Learn
+                    more </span> <i class="fa-solid fa-arrow-right-long"></i></a>
+        </div>
+    </div>
+
+    <!-- new section -->
+
+    <div class="relative w-[1148px] h-[500px] mx-auto mt-[50px] flex items-end justify-center">
+        <div class="absolute top-0 left-0 w-full z-[1]">
+            <img src="./assests/aesthetic.png" class="w-full">
+        </div>
+        <div
+            class="absolute z-[2] top-[50%] right-[50px] text-[#050038] text-center flex flex-col items-center justify-center gap-[15px]">
+            <h1 class="font-[700] text-[22px]">The Ways We Work</h1>
+            <p class="text-[18px]">How has our relationship with work changed?</p>
+            <a href="#"
+                class="flex items-center justify-center gap-[10px] w-[165px] text-[14px] h-[51px] bg-[#4262FF] rounded-full text-white">View
+                the report <i class="fa-solid fa-arrow-right-long"></i></a>
+        </div>
     </div>
 
     <script src="https://kit.fontawesome.com/19c0e07b44.js" crossorigin="anonymous"></script>
