complex layout completedg

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
     <!-- new section -->
 
-    <div class="relative w-[1148px] h-[500px] mx-auto mt-[50px] flex items-end justify-center">
+    <div class="relative w-[1148px] h-[565px] mx-auto my-[100px] flex items-end justify-center">
         <div class="absolute top-0 left-0 w-full z-[1]">
             <img src="./assests/aesthetic.png" class="w-full">
         </div>
@@ -211,6 +211,92 @@
                 class="flex items-center justify-center gap-[10px] w-[165px] text-[14px] h-[51px] bg-[#4262FF] rounded-full text-white">View
                 the report <i class="fa-solid fa-arrow-right-long"></i></a>
         </div>
+    </div>
+
+    <!-- new section -->
+    <div class="w-[1120px] px-[20px] flex flex-col items-start justify-start gap-[30px] mt-[70px] mx-auto">
+        <h1 class="text-[#050038] text-[48px] font-[700]">Built for the way you work</h1>
+
+        <div class="w-full flex justify-start items-center gap-[10px] text-[14px]">
+            <button
+                class="bg-[#F2F2F2] text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">Brainstorming</button>
+            <button
+                class="text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">Diagramming</button>
+            <button class="text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">Meetings &
+                Workshops</button>
+            <button class="text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">Scrum
+                Events</button>
+            <button
+                class="text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">Mapping</button>
+            <button class="text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">BrainResearch &
+                Designstorming</button>
+            <button class="text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">Strategic
+                Planning</button>
+        </div>
+
+        <div class="w-full flex justify-between items-start">
+            <div class="flex flex-col items-start justify-start gap-[20px]">
+                <h2 class="text-[#050038] text-[18px]">Brainstorming</h2>
+                <p class="text-[#050038B2] w-[302px]">Unleash creative ideas and build on them with the help of sticky
+                    notes,
+                    images, mind maps, videos,
+                    drawing capabilities — the list goes on.</p>
+
+                <a href="#" class="text-[#4262FF] flex justify-center items-center gap-[20px] mt-[15px]"><span
+                        class="underline">Learn
+                        more </span> <i class="fa-solid fa-arrow-right-long"></i></a>
+
+            </div>
+            <img src="./assests/cjLayout.png" alt="">
+        </div>
+
+    </div>
+
+    <!-- new section -->
+    <div class="w-[1120px] px-[20px] flex flex-col items-start justify-start gap-[30px] my-[200px] mx-auto">
+        <h1 class="text-[#050038] text-[48px] font-[700]">Built for the way you work</h1>
+
+        <div class="w-full flex justify-start items-center gap-[10px] text-[14px]">
+            <button class="bg-[#F2F2F2] text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">UX
+                & Design</button>
+            <button
+                class="text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">Marketing</button>
+            <button class="text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">Product
+                Management</button>
+            <button class="text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">Product
+                Management</button>
+            <button
+                class="text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">Consultants</button>
+            <button
+                class="text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">Consultants</button>
+            <button class="text-[#050038] border-[1px] border-[#ececec] rounded-full px-[10px] py-[5px]">Sales</button>
+        </div>
+
+        <div class="w-full flex justify-between items-start">
+            <div class="flex flex-col items-start justify-start gap-[20px]">
+
+                <p class="flex items-center justify-start gap-[20px] text-[#05003899] w-[308px]"><i
+                        class="fa-solid fa-check text-[#050038]"></i>
+                    Build
+                    low-fi
+                    wireframes</p>
+
+                <p class="flex items-center justify-start gap-[20px] text-[#05003899] w-[308px]"><i
+                        class="fa-solid fa-check text-[#050038]"></i>
+                    Involve stakeholders in the design process</p>
+
+                <p class="flex items-center justify-start gap-[20px] text-[#05003899] w-[308px]"><i
+                        class="fa-solid fa-check text-[#050038]"></i>
+                    Run engaging design workshops</p>
+
+                <a href="#" class="text-[#4262FF] flex justify-center items-center gap-[20px] mt-[15px]"><span
+                        class="underline">Learn
+                        more </span> <i class="fa-solid fa-arrow-right-long"></i></a>
+
+            </div>
+            <img src="./assests/engine.png" alt="">
+        </div>
+
     </div>
 
     <script src="https://kit.fontawesome.com/19c0e07b44.js" crossorigin="anonymous"></script>
