team section added

--- a/index.html
+++ b/index.html
@@ -299,6 +299,94 @@
 
     </div>
 
+    <!-- team section -->
+
+    <div class="w-[1140px] mx-auto flex flex-col justify-center items-center gap-[50px]">
+        <div class="flex flex-col items-center justify-center gap-[20px]">
+            <h1 class="text-[#050038] text-[48px] font-[700]">Loved by the world's best teams</h1>
+            <button class="border-[1px] border-[#4262FF] text-[#4262FF] px-[20px] py-[7px] rounded-full">See all
+                customer stories
+                →</button>
+        </div>
+
+        <div class="w-full h-[360px] py-[20px] flex justify-between items-center">
+
+            <div class="w-[300px] h-full flex flex-col items-start justify-between">
+                <img src="./assests/vmwere.png" class="w-[150px]">
+
+                <p class="text-[#05003899] min-h-[168px]">“When the pandemic hit, those of us who thrive on in-person
+                    collaboration
+                    were worried that our
+                    creativity and productivity would suffer. Miro was the perfect tool to help us with collaboration,
+                    whiteboarding, and retrospectives while remote.”</p>
+
+                <div class="flex items-start justify-center gap-[20px]">
+
+                    <div class="w-[48px] h-[48px] rounded-full overflow-hidden">
+                        <img src="./assests/user1.jpeg" class="w-full h-full object-cover">
+                    </div>
+
+                    <div class="flex flex-col justify-start items-start text-[#05003899]">
+                        <p>Roxanne Mustafa</p>
+                        <p>Design Team Lead at VMware</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="w-[300px] h-full flex flex-col items-start justify-between">
+                <img src="./assests/docu.png" class="w-[150px]">
+
+                <p class="text-[#05003899] min-h-[168px]">“Miro helps solve one of the major gaps in product design: how
+                    to manage
+                    tasks across product designers whose projects are in different tools.”</p>
+
+                <div class="flex items-start justify-center gap-[20px]">
+
+                    <div class="w-[48px] h-[48px] rounded-full overflow-hidden">
+                        <img src="./assests/user2.webp" class="w-full h-full object-cover">
+                    </div>
+
+                    <div class="flex flex-col justify-start items-start text-[#05003899]">
+                        <p>Jane Ashley</p>
+                        <p>Head of Design at DocuSign</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="w-[300px] h-full flex flex-col items-start justify-between">
+                <img src="./assests/vmwere.png" class="w-[150px]">
+
+                <p class="text-[#05003899] min-h-[168px]">“When the pandemic hit, those of us who thrive on in-person
+                    collaboration
+                    were worried that our
+                    creativity and productivity would suffer. Miro was the perfect tool to help us with collaboration,
+                    whiteboarding, and retrospectives while remote.”</p>
+
+                <div class="flex items-start justify-center gap-[20px]">
+
+                    <div class="w-[48px] h-[48px] rounded-full overflow-hidden">
+                        <img src="./assests/user1.jpeg" class="w-full h-full object-cover">
+                    </div>
+
+                    <div class="flex flex-col justify-start items-start text-[#05003899]">
+                        <p>Roxanne Mustafa</p>
+                        <p>Design Team Lead at VMware</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+
+        </div>
+    </div>
+
+
+
     <script src="https://kit.fontawesome.com/19c0e07b44.js" crossorigin="anonymous"></script>
 </body>
 
