--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
     <!-- team section -->
 
-    <div class="w-[1140px] mx-auto flex flex-col justify-center items-center gap-[50px]">
+    <div class="w-[1140px] mx-auto flex flex-col justify-center items-center gap-[50px] mb-[100px]">
         <div class="flex flex-col items-center justify-center gap-[20px]">
             <h1 class="text-[#050038] text-[48px] font-[700]">Loved by the world's best teams</h1>
             <button class="border-[1px] border-[#4262FF] text-[#4262FF] px-[20px] py-[7px] rounded-full">See all
@@ -385,6 +385,83 @@
         </div>
     </div>
 
+
+    <!-- footer -->
+    <footer class="bg-[#02033B] text-white h-[680px] flex flex-col justify-center items-center">
+
+        <div>
+
+            <div class="flex justify-between items-start gap-[20px] w-[1056px]">
+
+                <div class="flex flex-col items-start justify-start gap-[40px]">
+                    <h1 class="font-[800] text-[23px]">Scan. Detect. Remove.</h1>
+
+                    <div class="text-[50px]">
+                        <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                        <i class="fa-brands fa-square-facebook"></i>
+                        <i class="fab fa-youtube-square"></i>
+                    </div>
+
+                    <div class="flex gap-[20px] text-[11px]">
+                        <a href="#" class="underline">Privacy Policy</a>
+                        <a href="#" class="underline">Terms of Service</a>
+                    </div>
+
+                    <div class="w-[306px] flex flex-col gap-[20px] text-[11px]">
+                        <p>Copyright © 2022 Certo Software Limited | Registered in England & Wales No. 10072356</p>
+                        <p>Designed & developed by Bigger Picture</p>
+                    </div>
+                </div>
+
+                <div class="flex flex-col items-start justify-start gap-[50px] w-[186px]">
+                    <h1 class="text-[45px] font-[700] miro">Miro.</h1>
+                    <div class="text-[#FFC247] flex flex-col items-start justify-start gap-[20px]">
+                        <p class="text-[19px] font-[800]">- iPhone</p>
+                        <p class="text-[19px] font-[800]">- Android</p>
+                        <p class="text-[19px] font-[800]">- Help</p>
+                        <p class="text-[19px] font-[800]">- About</p>
+                        <p class="text-[19px] font-[800]">- Insights</p>
+                    </div>
+                </div>
+
+
+                <div
+                    class="w-[436px] h-[232px] bg-[#FFC247] rounded-[32px] relative flex flex-col justify-center items-start gap-[20px] p-[20px] ml-[20px]">
+
+
+                    <p
+                        class="absolute z-1 text-[200px] text-[#fdb235] w-full h-full top-0 left-0 flex justify-center items-center">
+                        C
+                    </p>
+
+                    <div class="relative z-2">
+                        <h1 class="font-[800] text-[#050038] text-[28px]">Sign up to our newsletter</h1>
+
+                        <p class="text-[15px] text-[#050038] ">Receive the latest mobile security news, exclusive
+                            discounts
+                            &
+                            offers straight to your inbox!</p>
+                        <div
+                            class="w-full overflow-hidden rounded-full h-[35px] bg-white flex justify-center items-center pl-[10px]">
+                            <input type="text" class="outline-none text-black w-full" placeholder="Email adress...">
+                            <button class="w-[168px] bg-[#02033B] h-full">Submit</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <p class="text-[11px] w-[550px] mt-[70px]">Apple, the Apple logo, and iPhone are trademarks of Apple Inc.,
+                registered
+                in
+                the U.S.
+                and other countries. App Store is a service mark of Apple Inc. Android, Google Play and the Google Play
+                logo
+                are trademarks of Google LLC.</p>
+
+        </div>
+
+    </footer>
 
 
     <script src="https://kit.fontawesome.com/19c0e07b44.js" crossorigin="anonymous"></script>
